--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1106,16 +1106,37 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;For a group of $n$  people find the expected number of days of the year which are
+<b>EXERCISE 4:</b>&nbsp;Show that if $X$  is a random variable taking only non-negative
+integer values, then 
+$$E(X) = \sum_{k=1}^\infty P(X\geq k).$$
+This formula often proves useful for finding expected counts.
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">
+Let $p_n = P(X=n)$  for $n=0,1,2,3,...$
+Then
+$$\begin{eqnarray*}
+P(X\geq 1) &amp; = &amp; p_1 + p_2 + p_3+\cdots\\
+P(X\geq 2) &amp; = &amp; \phantom{p_1 +} p_2 + p_3+\cdots\\
+P(X\geq 1) &amp; = &amp; \phantom{p_1 + p_2 +} p_3+\cdots\\
+\cdots
+\end{eqnarray*}$$
+Now add columnwise. Non-negative series do not change value when 
+you rearrange the terms.
+</div></p>
+
+</p>
+::<p>
+<b>EXERCISE 5:</b>&nbsp;For a group of $n$  people find the expected number of days of the year which are
  birthdays of exactly $k$  people. (Assume 365 days and that all arrangements are equally
  probable.) Also find the expected number of multiple birthdays. How large should $n$  be to
  make this expectation exceed 1?</p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one keys works). He tries the
+<b>EXERCISE 6:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one keys works). He tries the
  keys independently at random. Find the expected number of trials needed to open the door if 
  keys are tried (a) with replacement (b) without replacement.</p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv1.png"></th>
@@ -1127,7 +1148,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv2.png"></th>
@@ -1139,7 +1160,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv3.png"></th>
@@ -1151,7 +1172,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<center>
+<b>EXERCISE 10:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv4.png"></th>
@@ -1163,7 +1184,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<center>
+<b>EXERCISE 11:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv5.png"></th>
@@ -1175,7 +1196,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv6.png"></th>
@@ -1187,7 +1208,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv7.png"></th>
@@ -1199,7 +1220,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv8.png"></th>
@@ -1211,7 +1232,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv9.png"></th>
@@ -1223,7 +1244,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv11.png"></th>
@@ -1235,7 +1256,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv12.png"></th>
@@ -1247,7 +1268,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<center>
+<b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv13.png"></th>
@@ -1259,7 +1280,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<center>
+<b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv14.png"></th>
@@ -1273,7 +1294,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 
 <p></p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<center>
+<b>EXERCISE 20:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/fellrv1.png"></th>
@@ -1283,9 +1304,36 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </tr>
 </table>
 </center>
+You may use some approximations in parts (c) and (d) of this problem. For instamce there are
+ $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
+ may also differentiate w.r.t. $k.$ 
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">(a) $1-(1-p)^k.$
+<p></p>
+(b) For a group of size $k$  the random variable $X$  takes the value 
+$k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
+<p></p>
+So $E(X) = (k+1)(1-(1-p)^k)+(1-p)^k = k+1-k(1-p)^k.$
+<p></p>
+If there are $N$  people in all, where $N = qk+r$  with $r\in\{0,...,k-1\}$, 
+then this applies to each of the $q$  groups and also the reaminder group of size $r.$  
+<p></p>
+So the required expectation is 
+ $$q(k+1-k(1-p)^k)+r+1-r(1-p)^r.$$
+If $k$  divides $N$, then this is 
+$$\frac Nk(k+1-k(1-p)^k) = N+\frac Nk-N(1-p)^k = N\left(1+\frac 1k-(1-p)^k\right).$$
+<p></p>
+(c) Enough to minimise $1+\frac 1k-(1-p)^k$  wrt $k$  for given $p.$
+<p></p>
+Treating $k $ as a continuous variable, the derivative is 
+$$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
+<p></p>
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<center>
+<b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/fellrv2.png"></th>
@@ -1297,7 +1345,7 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 </p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<center>
+<b>EXERCISE 22:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most4.png"></th>
@@ -1309,8 +1357,8 @@ class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
-class="ans" id="lab2">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1325,7 +1373,7 @@ Put $x=\frac 56$  to find the required expectation.
 
 </p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<center>
+<b>EXERCISE 23:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most6.png"></th>
@@ -1337,7 +1385,7 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<center>
+<b>EXERCISE 24:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most14.png"></th>
@@ -1350,7 +1398,7 @@ Put $x=\frac 56$  to find the required expectation.
 
 </p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<center>
+<b>EXERCISE 25:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most15.png"></th>
@@ -1362,8 +1410,8 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
-class="ans" id="lab3">
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">
 <center>
 <table width="100%">
 <tr>
@@ -1416,7 +1464,7 @@ Or...use the indicator trick!!!
 
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<center>
+<b>EXERCISE 26:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most34.png"></th>
@@ -1428,7 +1476,7 @@ Or...use the indicator trick!!!
 </center>
 </p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<center>
+<b>EXERCISE 27:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most40.png"></th>
