--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -1050,16 +1050,15 @@ of length $2n$ starting from $(0,0)$ passes
 through $(2n,0).$ Also, let $u_0=1.$ Let $v_{2n}$
 denote the probability that a random path of length $2n$
 starting from $(0,0)$ returns to 0 for the first time
-at $2n.$ Here also we define $v_0=1.$ Then show without using the explicit form
+at $2n.$  Then show without using the explicit form
 of $u_{2n}$ and $v_{2n}$ that
 $$
-v_0u_{2n}+v_2 u_{2n-2} + \cdots + v_{2n} u_0 = 1.
+v_2 u_{2n-2} + \cdots + v_{2n} u_0 = u_{2n}.
 $$
-<p></p>
-
+[Corrected an error pointed out by Krishnam Baregama.]
 <p><a
 href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
-class="ans" id="lab4">Condition on the first time the path hits zero.</div></p>
+class="ans" id="lab4">Condition on the first time the path returns to zero, and then use the theorem of total probability.</div></p>
 
 </p>
 
