--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1078,7 +1078,8 @@ Often we have to find $E(X)$  where $X$  is the count of something, <i>e.g.</i>,
 Let $X$  be the number of singletons. Finding the distribution of $X$  is not easy. 
 <p></p>
 Instead we shall use the arrowheads as our random variables. Let the lamps be numbered from 1 to 20. Define $L_i=1$ 
- if $i$-th lamp is on, and $0$  else. In other words, $L_i=1$  means we have put an arrow head at position
+ if $i$-th lamp is on and is a singleton, and $0$  else. In other words, $L_i=1$  means we have put an
+ arrow head at position
  $i.$  
 <p></p>
 Each $L_i$  is called an <b><font color="red" size="40">indicator variable</font></b>. 
