--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -1612,8 +1612,13 @@ Let $C=$ the event that the 21-st is the two of clubs.
 <p></p>
 To find $P(B|A)=\frac{P(A\cap B)}{P(A)}$  and $P(C|A)=\frac{P(A\cap C)}{P(A)}.$
 <p></p>
-Here $|A|=4\times 51\times\cdots\times(51-19+1)$, $|A\cap B| = 1\times 3\times
- 50\times\cdots\times(50-19+1)$  and $|A\cap B| = 1\times 4\times 50\times\cdots\times(50-19+1).$
+Here $|A|=4\times 48\times\cdots\times(48-19+1)$, 
+<p></p>
+$|A\cap B| = 1\times 3\times
+ 48\times\cdots\times(48-19+1)$  and 
+$|A\cap C| = 1\times 4\times 48\times\cdots\times(48-19+1).$
+<p></p>
+[Corrected a mistake pointed out by Arnab Nayak.]
 </div></p>
 
 </p>
