--- a/prob1_2024/rv2.html
+++ b/prob1_2024/rv2.html
@@ -268,8 +268,8 @@ The following theorem often proves very useful.
 <p></p>
 
 <fieldset>
-<legend><b><i>Theorem</i></b></legend>
-Let $X$  be a non-negative random variable. Let $\epsilon&gt;0.$  Then 
+<legend><b><i>Markov inequality</i></b></legend>
+Let $X$  be any non-negative random variable. Let $\epsilon&gt;0.$  Then 
 $$E(X)\geq \epsilon P(X\geq\epsilon).$$
 </fieldset>
 
