--- a/prob1_2024/rv2.html
+++ b/prob1_2024/rv2.html
@@ -385,6 +385,34 @@ Hence the result.
 </p>
 
 <p></p>
+At last we shall be able to prove our first theorem about
+statistical regularity. This is essentially what we had started
+our class with.
+<p></p>
+
+<fieldset>
+<legend><b><i>Weak Law of Large Numbers (WLLN)</i></b></legend>
+Let $X_1,X_2,...$ be a sequence of independent and
+identically distributed (IID) random variables (defined
+on the same probability space) with $E(X_1)=\mu$ and
+$V(X_1)=\sigma^2&lt;\infty.$ Let, for $n\in{\mathbb N}$, 
+$$
+\overline X_n = \frac 1n\sum_{i=1}^n X_i.
+$$
+Then 
+$$
+\forall \epsilon &gt; 0~~ P(|\overline X_n-\mu|&gt; \epsilon) \rightarrow
+0\mbox{ as } n\rightarrow \infty.
+$$
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Do it yourself using Chebyshev inequality.
+<b><i>[QED]</i></b>
+</p>
+
+<p></p>
 
 <h1><a
 name="Moments">Moments</a></h1>
@@ -545,32 +573,84 @@ learn the proofs for CFs in the next semester.</b>
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 
-<ol type="">
+<p></p>
 
-<li>A box has 6 red balls an 4 black balls. An SRSWR of
+<p>
+<b>EXERCISE 2:</b>&nbsp;A box has 6 red balls an 4 black balls. An SRSWR of
 size $n$ is selected. If $X$ is the number of red
 balls selectrd, then find PMF and $E(X).$ Also solve the
-problem in the case of SRSWOR.</li>
+problem in the case of SRSWOR.</p>
 
-<li>Let $N$ be a positive integer. Let 
+<p>
+<b>EXERCISE 3:</b>&nbsp;Let $N$ be a positive integer. Let 
 $$
 f(x) = \left\{\begin{array}{ll}c 2^x &\text{if }x=1,2,...,N\\0&\text{otherwise.}\end{array}\right.
 $$
 be a PMF. Find $c.$ Find $E(X)$ and $V(X)$ if $X$ has this PMF.
-</li>
+</p>
 
-<li>An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
+<p>
+<b>EXERCISE 4:</b>&nbsp;An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
 Let $X$ be the maximum of the two numbers
-selected. Find $E(X).$</li>
+selected. Find $E(X).$</p>
 
-<li>An SRSWR of size $n$ is selected
+<p>
+<b>EXERCISE 5:</b>&nbsp;An SRSWR of size $n$ is selected
 from $\{1,2,...,12\}.$ Let $a_n $ be the expected
 value of the maximum of the sample. Show that $a_n \leq
-a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</li>
+a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 
-<p></p>
+<p>
+<b>EXERCISE 6:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossexp1.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
 
-</ol>
+<p>
+<b>EXERCISE 7:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossexp2.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+
+<p>
+<b>EXERCISE 8:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossexp3.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+
+<p>
+<b>EXERCISE 9:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossexp4.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
 
 <hr/>
 <table width="100%" border="0">
