--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -357,13 +357,15 @@ Now it is meaningful to talk about $X+Y.$
 
 <h2><a
 name="Functions of a random variable">Functions of a random variable</a></h2> 
-Any function of a random variable is again a random
-variable. This is immediate from the definition of a random
-variable (since composition of two functions is again a
-function). 
+Is any function of a random variable is again a random
+variable? Well, for all practical purposes the answer is "yes".  But technically speaking, we have to 
+avoid the "bad" subsets. This is how we do it.
 <p></p>
-Notice that any function of a discrete random variable must again
-be a discrete random variable. 
+Let $X:\Omega\rightarrow{\mathbb R}$  be any random variable. Let $f:{\mathbb R}\rightarrow{\mathbb R}$  be any Borel-mesurable function, <i>i.e.</i>, if $B\in {\mathcal B}$ 
+ then $f^{-1}(B)\in {\mathcal B}.$  Then $f(X)$  is again a random variable. Remember that $f(X)$  actually
+ means the composition function $(f\circ X):\Omega\rightarrow{\mathbb R}.$
+<p></p>
+
 <h1><a
 name="Distribution of a random variable">Distribution of a random variable</a></h1>
 Consider another gambling game. 
