--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1040,7 +1040,7 @@ Take any  $U\in{\mathcal D}$  be any simple random variable.
 <p></p>
 Let $U$  take only the values $u_1,...,u_k.$  
 <p></p>
-Let $p_{ij} = (X=x_i, U=u_j).$
+Let $p_{ij} = P(X=x_i, U=u_j).$
 <p></p>
 Then $E(U) =\sum_j (u_j \sum_i p_{ij}) = \sum_j\sum_i u_j p_{ij}.$  
 <p></p>
@@ -1198,7 +1198,7 @@ We have already seen this earlier in this page.
 <p></p>
 To show $E(X)\leq E(Y),$  <i>i.e.</i>, 
 $$\sup\{E(U)~:~U \mbox{ simple}, U\leq X\} \leq \sup\{E(V)~:~V \mbox{ simple}, V\leq Y\}.$$
-Enough the show that  $\{E(U)~:~U \mbox{ simple}, U\leq X\}\subseteq \{E(V)~:~V \mbox{ simple}, V\leq Y\}.$
+Enough to show that  $\{E(U)~:~U \mbox{ simple}, U\leq X\}\subseteq \{E(V)~:~V \mbox{ simple}, V\leq Y\}.$
 <p></p>
 Take any  simple $U\leq X.$  Then, since $X\leq Y,$  we also have $U\leq Y.$  Hence the result.
 <p></p>
@@ -1235,35 +1235,9 @@ The condition "$X$ always lies in $[a,b]$" may be
 written as $P(X\in[a,b])=1.$
 <p></p>
 
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-Let $a\in{\mathbb R}$ be any number. If $P(X\leq a)=1,$
-then $E(X)=a$ if and only if $X$ is degenerate at $a.$
-</fieldset>
-
-<p></p>
-However, if $a\in{\mathbb R}$ is replaced by $\infty,$ then the
-result fails, <i>i.e.</i>, it is possible to have a random
-variable $X$ that is always finite (any real-valued random
-variable will do, since $\infty\not\in{\mathbb R}$) such
-that $E(X)=\infty.$ 
-<p></p>
-
-<p>
-<b>EXAMPLE 6:</b>&nbsp;
-It is a standard fact that $\sum\frac{1}{n^2}&lt;\infty.$ Let the
-sum be $c.$ (The exact value of $c$
-which is $\frac{\pi^2}{6},$ is of no importance here).
-<p></p>
-Then consider a random variable $X$ that takes values
-in ${\mathbb N}$ and $P(X=n)=\frac{1}{cn^2}.$ 
-<p></p>
-Then $E(X) = \frac 1c\sum\frac 1n=\infty.$
- ■
-</p>
 By the way, if $X$ can take values $x_1,x_2,...$, there
 is no guaranty that $E(X)$ will equal any of
-the $x_i$'s. For example, if the $X$ is the outcome of
+the $x_i$'s. For example, if  $X$ is the outcome of
 a fair die, then $E(X)=3.5,$ which is not a possible
 outcome.
 <p></p>
